<resources>
    <string name="app_name">Testtestrun</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_activity_retrieve">RetrieveActivity</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="get_signal">Get Signal</string>
    <string name="permission_fine_location_rationale">grant location permission allows wifi scan</string>
    <string name="ok">Ok</string>
    <string name="monitor_wifi">Monitor Wifi</string>
    <string name="go_to_retrieve">Go to Retrieve</string>
    <string name="Done">Done</string>
    <string name="no_wifi_signal">No Wifi signal</string>
    <string name="stop_listen_signal">Stopped listening wifi signal</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Stop Service</string>
</resources>
