<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gan.testtestrun.MainActivity">
    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/my_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:elevation="4dp"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnStart" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnStart"
        android:layout_toRightOf="@+id/btnStart"
        android:layout_toEndOf="@+id/btnStart"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:id="@+id/btnStop" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginTop="100dp"
        android:id="@+id/graph" />

    <Button
        android:text="@string/go_to_retrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/btnRetrieve" />

    <Button
        android:text="@string/monitor_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRetrieve"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/btnWifi" />
</RelativeLayout>
